<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Dear Title</string>
    <string name="price_hint">Price (numbers only</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">save</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_main">Travelmantics</string>
    <string name="add_image_btn">Add Image</string>
    <string name="price_symbol">$ </string>
    <string name="price_default_num">000.00</string>


</resources>
